--- a/src/main/webapp/mystyles.css
+++ b/src/main/webapp/mystyles.css
@@ -186,8 +186,13 @@ canvas {
 }
 
 .custom-select {
-	font-family: Arial, Helvetica, sans-serif;
+	
 	position: relative;
+	font-weight: 600;
+	padding: 0.5rem;
+	border-radius: 0.5rem;
+	border: none;
+	
 }
 
 select {
