--- a/src/main/webapp/mystyles.css
+++ b/src/main/webapp/mystyles.css
@@ -22,7 +22,7 @@ body {
     text-decoration: none;
 }
 
-#loginBtn:hover, #registerBtn:hover, #getQuestionBtn:hover, #updatePassBtn:hover, #searchBtn:hover, #addNewGoalBtn:hover, #updateGoalBtn:hover, #addNewShelfBtn:hover, #logOutBtn:hover, #rateBook:hover, #finishBookBtn:hover  {
+#loginBtn:hover, #registerBtn:hover, #getQuestionBtn:hover, #updatePassBtn:hover, #searchBtn:hover, #addNewGoalBtn:hover, #updateGoalBtn:hover, #addNewShelfBtn:hover, #logOutBtn:hover, #rateBook:hover, #finishBookBtn:hover, #addProfilePicture:hover  {
 	background-color: #D9C9BA;
 	color: #5C3F35;
 }
@@ -60,7 +60,7 @@ body {
 	font-size: 1.1rem;
 	letter-spacing: 1px;
 	border-bottom: 1px solid gainsboro;
-	padding: 20px 10px 20px 10px;
+	/*padding: 20px 10px 20px 10px;*/
 	
 }
 
@@ -128,7 +128,7 @@ input.form-control:focus {
     box-shadow: 1px 1px 1px 0px #5C3F35; 
 } 
 
-#searchBtn, #registerBtn, #loginBtn, #logOutBtn, #updatePassBtn, #getQuestionBtn, #finishBookBtn, #addNewGoalBtn, #updateGoalBtn, #addNewShelfBtn, #rateBook {
+#searchBtn, #registerBtn, #loginBtn, #logOutBtn, #updatePassBtn, #getQuestionBtn, #finishBookBtn, #addNewGoalBtn, #updateGoalBtn, #addNewShelfBtn, #rateBook, #addProfilePicture {
     color: #F2EDE4;
     background-color: #5C3F35;
     font-weight: 600;
@@ -280,6 +280,16 @@ input[type="radio"] {
 	text-align: center;
 }
 
+input[type=file]::file-selector-button {
+  border: none;
+  background: #D9C9BA;
+  color: #5C3F35;
+}
+
+input[type=file]::file-selector-button:hover {
+  background: #5C3F35;
+  color: #D9C9BA;
+}
 
 
 
