--- a/src/main/webapp/mystyles.css
+++ b/src/main/webapp/mystyles.css
@@ -119,7 +119,7 @@ nav {
 /*search bar*/
 input.form-control { 
     width: 300px;
-    color: #5C3F35;
+    /*color: #5C3F35;*/
     font-size: 1rem;
     letter-spacing: 1px;
 } 
@@ -257,6 +257,7 @@ select {
 
 #finishBookBtn, #rateBook {
 	margin-bottom: 20px;
+	margin-top: 20px;
 }
 
 #reviewTitle {
@@ -294,6 +295,9 @@ input[type=file]::file-selector-button:hover {
   color: #D9C9BA;
 }
 
+input[type=radio] {
+	accent-color: #B3746F;
+}
 
 
 
